--- a/sass/main.sass
+++ b/sass/main.sass
@@ -33,6 +33,59 @@ section
 
 #app
 	display: flex
+	position: relative
+
+.btn_show_nuv
+	outline: 1px #815A0F
+	width: 50px
+	height: 43px
+	background-color: $black
+	position: fixed
+	right: 15px
+	top: 15px
+	border-radius: 4px
+	border: 1px solid #1d1d1d
+	z-index: 9
+	padding: 10px
+	display: none
+	&__line
+		display: block
+		width: 28px
+		height: 2px
+		background-color: $green
+		position: absolute
+		top: 50%
+		left: 10px
+		transform: translateY(-50%)
+		transition: all 320ms cubic-bezier(0.42, 0, 0.38, 1.54)
+		&:before
+			content: ''
+			display: block
+			width: 28px
+			height: 2px
+			background-color: $green
+			transform: translateY(-100%)
+			position: absolute
+			top: -6px
+		&:after
+			content: ''
+			display: block
+			width: 28px
+			height: 2px
+			background-color: $green
+			transform: translateY(100%)
+			position: absolute
+			bottom: -6px
+
+.btn_show_nuv__active
+	.btn_show_nuv__line
+		transform: rotate(45deg)
+		&:before
+			transform: translateY(0)
+			top: 0
+		&:after
+			transform: translateY(0) rotate(-90deg)
+			bottom: 0
 
 #sections
 	width: 100%
@@ -46,6 +99,7 @@ section
 	align-items: center
 	transition: all .35s ease
 	border-right: 1px solid #000
+	z-index: 999
 
 .switch_nuv
 	width: 25px
@@ -156,7 +210,7 @@ section
 .welcome_block
 	position: absolute
 	top: 50%
-	left: 100px
+	left: 7%
 	transform: translateY(-50%)
 	z-index: 10
 	h1
@@ -178,7 +232,7 @@ section
 	a
 		text-decoration: none
 		display: inline-block
-		padding: 6px 34px 10px 34px
+		padding: 10px 34px
 		background-color: $green
 		color: #fff
 		font-size: 15px
@@ -200,7 +254,20 @@ section
 .title
 	padding: 60px 70px
 	h1
+		font-family: 'Lobster', sans-serif
+		font-size: 40px
+		font-style: italic
 		color: #fff
+		position: relative
+		&:before
+			content: attr(data-text)
+			display: block
+			text-transform: uppercase
+			position: absolute
+			color: #232323
+			z-index: -1
+			top: 12px
+			left: -5px
 
 .about
 	display: flex
@@ -267,6 +334,7 @@ section
 			font-size: 14px
 		&_right
 			font-size: 12px
+			text-align: right
 
 .portfolio
 	&__filter
@@ -299,12 +367,11 @@ section
 		flex-wrap: wrap
 		&:after
 			content: ''
-			width: 365px
+			width: 32.333333%
 
 .portfolio__item
-	width: 365px
-	margin-right: 22px
-	margin-bottom: 22px
+	width: 32.333333%
+	margin-bottom: 17px
 	position: relative
 	overflow: hidden
 	&:hover
@@ -454,5 +521,6 @@ section
 	text-align: center
 	color: #ccc
 	font-size: 12px
+	border-top: 1px solid #1D1D1D
 
 @import "_media"
