--- a/css/main.css
+++ b/css/main.css
@@ -508,6 +508,9 @@ section {
 }
 
 .about_tab__nuv ul li.about_tab__active a {
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
   color: #7CA95C;
   border-top: 1px solid #7CA95C;
 }
@@ -711,6 +714,41 @@ section {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  overflow: hidden;
+  background-image: url("http://reva.bouthythemes.com/images/background-client.jpg");
+  -webkit-background-size: cover;
+          background-size: cover;
+  background-repeat: no-repeat;
+  background-position: -170px;
+}
+
+.contact__right:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(124, 169, 92, 0.7);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  top: 0;
+}
+
+.contact__right .bg_text {
+  display: none;
+  position: absolute;
+  right: -68px;
+  top: -10px;
+  font-family: 'Lobster', sans-serif;
+  font-size: 102px;
+  color: #fff;
+  opacity: .1;
+  -webkit-transform: rotate(38deg);
+      -ms-transform: rotate(38deg);
+          transform: rotate(38deg);
+  text-align: center;
 }
 
 .contact__form {
@@ -835,6 +873,11 @@ section {
           transform: translateX(-100%);
 }
 
+.my_contact {
+  position: relative;
+  z-index: 4;
+}
+
 .my_contact li:not(:last-of-type) {
   margin-bottom: 36px;
 }
@@ -866,6 +909,244 @@ section {
   border-top: 1px solid #1D1D1D;
 }
 
+/* Start Loading */
+.loading {
+  background-color: #FFF;
+  color: #444;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+}
+
+.blob {
+  width: 2rem;
+  height: 2rem;
+  background: rgba(0, 0, 0, 0.85);
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  position: absolute;
+  left: -webkit-calc(50% - 1rem);
+  left: calc(50% - 1rem);
+  top: -webkit-calc(50% - 1rem);
+  top: calc(50% - 1rem);
+  -webkit-box-shadow: 0 0 1rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 1rem rgba(255, 255, 255, 0.25);
+}
+
+.blob-2 {
+  -webkit-animation: animate-to-2 1.5s infinite;
+          animation: animate-to-2 1.5s infinite;
+}
+
+.blob-3 {
+  -webkit-animation: animate-to-3 1.5s infinite;
+          animation: animate-to-3 1.5s infinite;
+}
+
+.blob-1 {
+  -webkit-animation: animate-to-1 1.5s infinite;
+          animation: animate-to-1 1.5s infinite;
+}
+
+.blob-4 {
+  -webkit-animation: animate-to-4 1.5s infinite;
+          animation: animate-to-4 1.5s infinite;
+}
+
+.blob-0 {
+  -webkit-animation: animate-to-0 1.5s infinite;
+          animation: animate-to-0 1.5s infinite;
+}
+
+.blob-5 {
+  -webkit-animation: animate-to-5 1.5s infinite;
+          animation: animate-to-5 1.5s infinite;
+}
+
+@-webkit-keyframes animate-to-2 {
+  25%, 75% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-2 {
+  25%, 75% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@-webkit-keyframes animate-to-3 {
+  25%, 75% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-3 {
+  25%, 75% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@-webkit-keyframes animate-to-1 {
+  25% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  50%, 75% {
+    -webkit-transform: translateX(-4.5rem) scale(0.6);
+            transform: translateX(-4.5rem) scale(0.6);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-1 {
+  25% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  50%, 75% {
+    -webkit-transform: translateX(-4.5rem) scale(0.6);
+            transform: translateX(-4.5rem) scale(0.6);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@-webkit-keyframes animate-to-4 {
+  25% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  50%, 75% {
+    -webkit-transform: translateX(4.5rem) scale(0.6);
+            transform: translateX(4.5rem) scale(0.6);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-4 {
+  25% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  50%, 75% {
+    -webkit-transform: translateX(4.5rem) scale(0.6);
+            transform: translateX(4.5rem) scale(0.6);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@-webkit-keyframes animate-to-0 {
+  25% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  50% {
+    -webkit-transform: translateX(-4.5rem) scale(0.6);
+            transform: translateX(-4.5rem) scale(0.6);
+  }
+  75% {
+    -webkit-transform: translateX(-7.5rem) scale(0.5);
+            transform: translateX(-7.5rem) scale(0.5);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-0 {
+  25% {
+    -webkit-transform: translateX(-1.5rem) scale(0.75);
+            transform: translateX(-1.5rem) scale(0.75);
+  }
+  50% {
+    -webkit-transform: translateX(-4.5rem) scale(0.6);
+            transform: translateX(-4.5rem) scale(0.6);
+  }
+  75% {
+    -webkit-transform: translateX(-7.5rem) scale(0.5);
+            transform: translateX(-7.5rem) scale(0.5);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@-webkit-keyframes animate-to-5 {
+  25% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  50% {
+    -webkit-transform: translateX(4.5rem) scale(0.6);
+            transform: translateX(4.5rem) scale(0.6);
+  }
+  75% {
+    -webkit-transform: translateX(7.5rem) scale(0.5);
+            transform: translateX(7.5rem) scale(0.5);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+@keyframes animate-to-5 {
+  25% {
+    -webkit-transform: translateX(1.5rem) scale(0.75);
+            transform: translateX(1.5rem) scale(0.75);
+  }
+  50% {
+    -webkit-transform: translateX(4.5rem) scale(0.6);
+            transform: translateX(4.5rem) scale(0.6);
+  }
+  75% {
+    -webkit-transform: translateX(7.5rem) scale(0.5);
+            transform: translateX(7.5rem) scale(0.5);
+  }
+  95% {
+    -webkit-transform: translateX(0rem) scale(1);
+            transform: translateX(0rem) scale(1);
+  }
+}
+
+/* End Loading */
 /*========================
 	@Media запросы
 	@mixin =======================*/
