--- a/sass/main.sass
+++ b/sass/main.sass
@@ -435,7 +435,7 @@ section
 		align-items: center
 		position: relative
 		overflow: hidden
-		background-image: url('http://reva.bouthythemes.com/images/background-client.jpg')
+		background-image: url('../img/bg_contact.jpg')
 		background-size: cover
 		background-repeat: no-repeat
 		background-position: -170px
@@ -450,17 +450,6 @@ section
 			bottom: 0
 			left: 0
 			top: 0
-		.bg_text
-			display: none
-			position: absolute
-			right: -68px
-			top: -10px
-			font-family: 'Lobster', sans-serif
-			font-size: 102px
-			color: #fff
-			opacity: .1
-			transform: rotate(38deg)
-			text-align: center
 	&__form
 		display: flex
 		justify-content: space-between
