--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,5 +1,6 @@
 @import "mixins/_font-face"
 
-@include font-face("Poppinsregular")
-@include font-face("Poppinsbold")
-@include font-face("Lobster")
+@include font-face("OpenSansSemiBold")
+@include font-face("Roboto")
+@include font-face("RobotoBlack")
+@include font-face("RobotoBold")
