--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -1,3 +1,4 @@
+// Reset
 body,
 h1, h2, h3, h4, h5, h6,
 div, p, span, pre, iframe,
@@ -28,3 +29,4 @@ button
 	background-color: transparent
 	cursor: pointer
 	border: none
+// End Reset
