--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,6 @@
 }
 
 @font-face {
-  font-family: "RobotoBlack";
-  src: url("../fonts/RobotoBlack/RobotoBlack.woff2") format("woff2"), url("../fonts/RobotoBlack/RobotoBlack.woff") format("woff"), url("../fonts/RobotoBlack/RobotoBlack.ttf") format("truetype");
-}
-
-@font-face {
   font-family: "RobotoBold";
   src: url("../fonts/RobotoBold/RobotoBold.woff2") format("woff2"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype");
 }
@@ -70,6 +65,20 @@ button {
   font-family: Roboto, sans-serif;
 }
 
+*::-moz-selection {
+  color: #fff;
+  background-color: #3335C3;
+}
+
+*::selection {
+  color: #fff;
+  background-color: #3335C3;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .centerer {
   max-width: 1200px;
   padding: 0 15px;
@@ -93,10 +102,14 @@ button {
 
 .header {
   border-bottom: 1px solid #eaeaea;
+  background-color: #fff;
 }
 
 .header_logo img {
   height: 40px;
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
 }
 
 .header_nuv {
@@ -168,13 +181,28 @@ button {
           align-items: center;
 }
 
-.header_nuv_wrp .header_search {
+.header_btns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header_btns button {
   font-size: 17px;
+}
+
+.header_btns button:not(:first-of-type) {
+  margin-left: 18px;
 }
 
 .popup_search {
   display: none;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
@@ -199,6 +227,7 @@ button {
 }
 
 .popup_search input {
+  background: none;
   border: none;
   font-size: 60px;
   position: absolute;
@@ -210,7 +239,7 @@ button {
   border-bottom: 2px solid #222;
   color: #222;
   padding-bottom: 15px;
-  font-family: RobotoBlack, sans-serif;
+  font-family: RobotoBold, sans-serif;
 }
 
 .popup_search input::-webkit-input-placeholder {
@@ -284,6 +313,285 @@ button {
   opacity: 0.8;
 }
 
+.popup_mobile_menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  display: none;
+}
+
+.popup_mobile_menu .mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.popup_mobile_menu .mobile_menu {
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.popup_mobile_menu__active .mobile_menu {
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: all .30s ease-in-out;
+  -o-transition: all .30s ease-in-out;
+  transition: all .30s ease-in-out;
+}
+
+.to_mobile_menu {
+  display: none;
+}
+
+.mobile_menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #fff;
+  width: 350px;
+  overflow-y: scroll;
+  -webkit-transition: all .30s ease-in-out;
+  -o-transition: all .30s ease-in-out;
+  transition: all .30s ease-in-out;
+}
+
+.mobile_menu_top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.mobile_menu_top .close_mobile_menu {
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: #000000;
+  color: #fff;
+  font-size: 16px;
+  margin: 22px 0;
+}
+
+.mobile_menu_top form {
+  width: 253px;
+  position: relative;
+}
+
+.mobile_menu_top form input[type="text"] {
+  border: none;
+  width: 100%;
+  padding: 8px 30px 8px 15px;
+  -webkit-border-radius: 100px;
+          border-radius: 100px;
+  border: 1px solid #dadada;
+}
+
+.mobile_menu_top form button {
+  position: absolute;
+  right: 15px;
+  top: 8px;
+  font-size: 16px;
+}
+
+.mobile_menu_center ul li {
+  border-top: 1px solid #dadada;
+}
+
+.mobile_menu_center ul li:last-child {
+  border-bottom: 1px solid #dadada;
+}
+
+.mobile_menu_center ul li a {
+  text-decoration: none;
+  display: block;
+  padding: 10px 0 10px 40px;
+  font-family: OpenSansSemiBold, sans-serif;
+  font-size: 14px;
+  color: #171717;
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+.mobile_menu_center ul li a:hover {
+  color: #797979;
+}
+
+.footer {
+  background-color: #040404;
+}
+
+.footer_top {
+  padding: 50px 0;
+  border-bottom: 1px solid #202020;
+}
+
+.footer_bottom {
+  padding: 25px 0;
+  text-align: center;
+}
+
+.footer_bottom p {
+  color: #999;
+  font-size: 14px;
+}
+
+.footer_items {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer_item {
+  width: 370px;
+}
+
+.footer_item h3 {
+  font-family: RobotoBold, sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.about_us p {
+  font-size: 15px;
+  color: #999;
+  line-height: 1.5;
+}
+
+.last_posts ul li {
+  margin: 0 0 7px 15px;
+}
+
+.last_posts ul li a {
+  color: #999;
+  text-decoration: none;
+  font-size: 15px;
+  position: relative;
+}
+
+.last_posts ul li a:before {
+  content: "\f105";
+  display: block;
+  font-family: FontAwesome;
+  color: #999;
+  position: absolute;
+  left: -15px;
+  top: 1px;
+}
+
+.last_posts ul li a:hover {
+  text-decoration: underline;
+}
+
+.newslater form input[type="text"] {
+  border: none;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 13px;
+  color: #999;
+  margin-bottom: 20px;
+}
+
+.newslater form button {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  color: #fff;
+  font-family: RobotoBold, sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  background-color: #0036c3;
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+.newslater form button:hover {
+  background-color: #002890;
+}
+
+.pagination ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination ul li a {
+  text-decoration: none;
+  font-family: OpenSansSemiBold, sans-serif;
+  font-size: 15px;
+  display: block;
+  padding: 8px 16px;
+  border-right: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  color: #171717;
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+.pagination ul li a:hover {
+  color: #fff;
+  background-color: #0036c3;
+}
+
+.pagination ul li:first-child a {
+  border-left: 1px solid #ddd;
+}
+
+.pagination ul li.active_pagination a {
+  color: #fff;
+  background-color: #0036c3;
+}
+
+.pagination {
+  margin: 40px 0;
+}
+
 /*========================
 	@Media запросы
 	@mixin =======================*/
@@ -291,14 +599,60 @@ button {
   /**/
 }
 
+@media only screen and (min-width: 992px) {
+  .header_logo img {
+    height: 40px !important;
+  }
+}
+
 @media only screen and (max-width: 992px) {
   .grid_item {
     width: 50%;
   }
+  .header_nuv {
+    display: none;
+  }
+  .to_mobile_menu {
+    display: block;
+  }
+  .header_inner {
+    height: 60px;
+  }
+  .header_logo img {
+    height: 30px;
+  }
+  body {
+    padding-top: 60px;
+  }
+  header {
+    position: fixed;
+    right: 0;
+    top: 0;
+    left: 0;
+    z-index: 99;
+  }
+  .header_btns button {
+    height: 60px;
+  }
+  .footer_items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer_items .footer_item {
+    width: 100%;
+  }
+  .footer_items .footer_item:not(:last-of-type) {
+    margin-bottom: 40px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-  /**/
+  .popup_search input {
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
