--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,6 +5,12 @@
 
 *
 	font-family: Roboto, sans-serif
+	&::selection
+		color: #fff
+		background-color: #3335C3
+
+body
+	overflow-x: hidden
 
 .centerer
 	max-width: 1200px
@@ -18,9 +24,11 @@
 
 .header
 	border-bottom: 1px solid #eaeaea
+	background-color: #fff
 	&_logo
 		img
 			height: 40px
+			transition: all .25s ease
 	&_nuv
 		display: flex
 		margin-right: 13px
@@ -53,12 +61,18 @@
 .header_nuv_wrp
 	display: flex
 	align-items: center
-	.header_search
+
+.header_btns
+	display: flex
+	align-items: center
+	button
 		font-size: 17px
+		&:not(:first-of-type)
+			margin-left: 18px
 
 .popup_search
 	display: none
-	position: absolute
+	position: fixed
 	width: 100%
 	height: 100%
 	top: 0
@@ -78,6 +92,7 @@
 		top: 40px
 		right: 40px
 	input
+		background: none
 		border: none
 		font-size: 60px
 		position: absolute
@@ -87,7 +102,7 @@
 		border-bottom: 2px solid #222
 		color: #222
 		padding-bottom: 15px
-		font-family: RobotoBlack, sans-serif
+		font-family: RobotoBold, sans-serif
 		&::placeholder
 			color: #222
 
@@ -127,5 +142,195 @@
 		transition: all .25s ease
 		&:hover
 			opacity: 0.8
+
+.popup_mobile_menu
+	position: fixed
+	width: 100%
+	height: 100%
+	top: 0
+	right: 0
+	bottom: 0
+	left: 0
+	z-index: 99
+	display: none
+	.mask
+		position: absolute
+		width: 100%
+		height: 100%
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background-color: rgba(000,000,000,.7)
+	.mobile_menu
+		transform: translateX(100%)
+
+.popup_mobile_menu__active
+	.mobile_menu
+		transform: translateX(0)
+		transition: all .30s ease-in-out
+
+.to_mobile_menu
+	display: none
+
+.mobile_menu
+	position: fixed
+	right: 0
+	top: 0
+	bottom: 0
+	background-color: #fff
+	width: 350px
+	overflow-y: scroll
+	transition: all .30s ease-in-out
+	&_top
+		display: flex
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		margin-bottom: 20px
+		.close_mobile_menu
+			width: 40px
+			height: 40px
+			border-radius: 50%
+			background-color: #000000
+			color: #fff
+			font-size: 16px
+			margin: 22px 0
+		form
+			width: 253px
+			position: relative
+			input[type="text"]
+				border: none
+				width: 100%
+				padding: 8px 30px 8px 15px
+				border-radius: 100px
+				border: 1px solid #dadada
+			button
+				position: absolute
+				right: 15px
+				top: 8px
+				font-size: 16px
+	&_center
+		ul
+			li
+				border-top: 1px solid #dadada
+				&:last-child
+					border-bottom: 1px solid #dadada
+				a
+					text-decoration: none
+					display: block
+					padding: 10px 0 10px 40px
+					font-family: OpenSansSemiBold, sans-serif
+					font-size: 14px
+					color: #171717
+					transition: all .25s ease
+					&:hover
+						color: #797979
+
+.footer
+	background-color: #040404
+	&_top
+		padding: 50px 0
+		border-bottom: 1px solid #202020
+	&_bottom
+		padding: 25px 0
+		text-align: center
+		p
+			color: #999
+			font-size: 14px		
+
+.footer_items
+	display: flex
+	justify-content: space-between
+
+.footer_item
+	width: 370px
+	h3
+		font-family: RobotoBold, sans-serif
+		text-transform: uppercase
+		font-size: 20px
+		color: #fff
+		margin-bottom: 20px
+
+.about_us
+	p
+		font-size: 15px
+		color: #999
+		line-height: 1.5
+
+.last_posts
+	ul
+		li
+			margin: 0 0 7px 15px
+			a
+				color: #999
+				text-decoration: none
+				font-size: 15px
+				position: relative
+				&:before
+					content: "\f105"
+					display: block
+					font-family: FontAwesome
+					color: #999
+					position: absolute
+					left: -15px
+					top: 1px
+				&:hover
+					text-decoration: underline
+
+.newslater
+	form
+		input[type="text"]
+			border: none
+			width: 100%
+			height: 40px
+			line-height: 40px
+			text-align: center
+			font-size: 13px
+			color: #999
+			margin-bottom: 20px
+		button
+			width: 100%
+			height: 40px
+			line-height: 40px
+			color: #fff
+			font-family: RobotoBold, sans-serif
+			text-transform: uppercase
+			font-size: 13px
+			background-color: $accent
+			transition: all .25s ease
+			&:hover
+				background-color: darken($accent, 10)
+
+.pagination
+	ul
+		width: 100%
+		display: flex
+		justify-content: center
+		li
+			a
+				text-decoration: none
+				font-family: OpenSansSemiBold, sans-serif
+				font-size: 15px
+				display: block
+				padding: 8px 16px
+				border-right: 1px solid #ddd
+				border-top: 1px solid #ddd
+				border-bottom: 1px solid #ddd
+				color: #171717
+				transition: all .25s ease
+				&:hover
+					color: #fff
+					background-color: $accent
+			&:first-child
+				a
+					border-left: 1px solid #ddd
+		li.active_pagination
+			a
+				color: #fff
+				background-color: $accent
+
+.pagination
+	margin: 40px 0
 
 @import "_media"
