--- a/sass/main.sass
+++ b/sass/main.sass
@@ -331,6 +331,49 @@ body
 				background-color: $accent
 
 .pagination
-	margin: 40px 0
+	margin: 40px 0 140px 0
+
+.single_wrp
+	display: flex
+	justify-content: space-between
+	margin-top: 50px
+	margin-bottom: 43px
+
+.article
+	width: 781px
+	&__thumbnail
+		margin-bottom: 30px
+		img
+			max-width: 100%
+	&__title
+		margin-bottom: 10px
+		h1
+			font-family: RobotoBold, sans-serif
+			font-size: 50px
+			line-height: 1.067
+			letter-spacing: -0.025em
+			color: #000
+	&__content
+		p
+			font-size: 15px
+			color: #666666
+
+.sidebar
+	width: 334px
+
+.sidebar_last_post
+	display: flex
+	align-items: center
+	img
+		width: 125px
+		margin-right: 13px
+	a
+		text-decoration: none
+		font-family: RobotoBold, sans-serif
+		font-size: 17px
+		transition: all .25s ease
+		color: #000
+		&:hover
+			color: $accent
 
 @import "_media"
