--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,6 +40,16 @@
 			width: 100%
 			&:not(:last-of-type)
 				margin-bottom: 40px
+	.single_wrp
+		flex-direction: column
+	.article
+		padding-right: 0
+		width: 100%
+		margin-bottom: 120px
+	.sidebar
+		width: 100%
+	.to_top
+		display: none !important
 
 @media only screen and (max-width: 768px)
 	.popup_search
