--- a/sass/main.sass
+++ b/sass/main.sass
@@ -336,11 +336,13 @@ body
 .single_wrp
 	display: flex
 	justify-content: space-between
+	flex-wrap: wrap
 	margin-top: 50px
 	margin-bottom: 43px
 
 .article
-	width: 781px
+	width: 69.66666667%
+	padding-right: 30px
 	&__thumbnail
 		margin-bottom: 30px
 		img
@@ -359,11 +361,19 @@ body
 			color: #666666
 
 .sidebar
-	width: 334px
+	width: 30.33333333%
+	h3
+		font-family: RobotoBold, sans-serif
+		font-size: 20px
+		text-transform: uppercase
+		letter-spacing: -0.025em
+		margin-bottom: 25px
 
 .sidebar_last_post
 	display: flex
 	align-items: center
+	&:not(:last-of-type)
+		margin-bottom: 26px
 	img
 		width: 125px
 		margin-right: 13px
@@ -375,5 +385,17 @@ body
 		color: #000
 		&:hover
 			color: $accent
+
+.to_top
+	position: fixed
+	right: 15px
+	bottom: 15px
+	z-index: 9
+	button
+		width: 40px
+		height: 40px
+		background-color: rgba(0,0,0,.8)
+		color: #fff
+		font-size: 18px
 
 @import "_media"
